--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">手机管理系统</string>
+    <string name="open">开</string>
+    <string name="close">关</string>
 </resources>
