--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="switch_model">切换主题</string>
     <string name="login_out">未登录</string>
     <string name="set_pwd_title">设置密码</string>
+    <string name="input_pwd_title">输入密码</string>
     <string name="input_pwd">输入密码：</string>
     <string name="input_pwd_again">再次输入：</string>
     <string name="cancel">取消</string>
