--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <string name="security_welcome">欢迎使用手机防盗</string>
     <string name="set_security_num">设置安全号码</string>
-    <string name="next">向左滑进入设置安全号码</string>
+    <string name="next">下一步</string>
     <string name="start_security">开启手机防盗</string>
     <string name="security_description">请输入或选择联系人作为安全号码，\n SIM卡变更后，报警短信会发送给安全号码</string>
     <string name="location_str">定位手机的位置</string>
