--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="start_security">开启手机防盗</string>
     <string name="security_description">请输入或选择联系人作为安全号码，\n SIM卡变更后，报警短信会发送给安全号码</string>
     <string name="location_str">定位手机的位置</string>
+    <string name="sample_device_admin_description">我是设备超级管理员的描述</string>
+    <string name="sample_device_admin">我是设备超级管理员</string>
 
 </resources>
