--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,12 @@
     <string name="confirm">确定</string>
 
     <string name="reset_pwd_title">重置密码</string>
-    <string name="input_old_pwd">输入原始密码：</string>
+    <string name="input_origin_pwd">输入原始密码：</string>
     <string name="input_reset_pwd">输入新的密码：</string>
     <string name="input_reset_pwd_again">再次输入密码：</string>
+
+    <string name="reset_phone_title">重置安全号码</string>
+    <string name="input_new_phone">输入新的安全号码：</string>
 
     <string name="security_welcome">欢迎使用手机防盗</string>
     <string name="set_security_num">设置安全号码</string>
