PhoneManager:add service for theftProof
Signed-off-by: songwenju <songwenju@outlook.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,10 @@
     <string name="security_description">请输入或选择联系人作为安全号码，\n SIM卡变更后，报警短信会发送给安全号码</string>
     <string name="location_str">定位手机的位置</string>
     <string name="sample_device_admin_description">我是设备超级管理员的描述</string>
-
-    
     <string name="sample_device_admin">我是设备超级管理员</string>
+    <string name="open_proof_service">开启手机防盗服务</string>
+    <string name="change_safe_num">更改安全号码</string>
+    <string name="change_pwd">更改密码</string>
 
 
 </resources>
