--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="black_num_hint">请输入黑名单号码</string>
     <string name="phone_intercept">电话拦截</string>
     <string name="sms_intercept">短信拦截</string>
+    <string name="soft_manager_title">软件管家</string>
 
 
 </resources>
