PhoneManager:add the softManager Setting activity
Signed-off-by: songwenju <hgdswj@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="phone_intercept">电话拦截</string>
     <string name="sms_intercept">短信拦截</string>
     <string name="soft_manager_title">软件管家</string>
+    <string name="open_soft_lock">开启程序锁</string>
 
 
 </resources>
